AppConfigService: getConfig*(AppConfigEnum) AppConfigEnum: comment